[workspace]
members = [
    "core",
    "ai-engine", 
    "jito-bundler",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Sentinel Router Team"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Solana core
solana-sdk = "2.0"
solana-client = "2.0"
solana-transaction-status = "2.0"
solana-system-interface = { version = "2.0", features = ["bincode"] }

# Helius LaserStream - gRPC streaming for real-time Solana data
helius-laserstream = "0.1.2"

# gRPC & Protobuf
tonic = "0.11"
tonic-tracing-opentelemetry = "0.15"
prost = "0.12"
prost-types = "0.12"

# Pyth Oracle
pyth-sdk-solana = "0.8"

# AI/ML
ort = { version = "2.0.0-rc.10", features = ["half"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data handling
arrow = { version = "53.0", features = ["prettyprint"] }
parquet = { version = "53.0", features = ["async", "arrow"] }
object_store = { version = "0.11", features = ["aws", "azure", "gcp"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"

# Cryptographic hashing
blake3 = "1.5"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Encoding
bs58 = "0.5"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
prometheus = "0.13"

# Configuration
config = "0.13"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Base64 encoding
base64 = "0.21"

# HTTP framework
axum = "0.7"

# Tower middleware
tower-http = { version = "0.5", features = ["trace"] }
tower = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
